# enablar-lesson3-workshop

presentation/: index.html
presentation/shower/themes/ribbon/styles/shower/: shower.css
presentation/shower/themes/ribbon/styles/slide/content/: basic.css
src/: nbt.py  pyproject.toml
src/data/in/: stcn_download.json
