[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "ipysigma>=0.24.6",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "pathlib>=1.0.1",
    "scipy>=1.17.1",
]
